--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="/styles/bootstrap-theme.css">
     <link rel="stylesheet" href="/styles/bootstrap.css">
     <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/toastr/2.0.1/toastr.css">
     <!--STYLES END-->
   </head>
 
@@ -94,8 +95,11 @@
     <script src="/js/jquery.js"></script>
     <script src="/js/angular.min.js"></script>
     <script src="/js/bootstrap.js"></script>
-    <script src="/js/createTemplate.js"></script>
+    <script src="//cdn.jsdelivr.net/toastr/2.0.1/toastr.min.js"></script>
+
 
     <!--SCRIPTS END-->
+
+    <%- blocks.localScripts %>
   </body>
 </html>
