--- a/views/index/home.ejs
+++ b/views/index/home.ejs
@@ -1,93 +1,26 @@
-<style>
-
-    .main-text
-    {
-        position: absolute;
-        top: 50px;
-        width: 97.66666666666666%;
-        color: #FFF;
-    }
-    .btn-min-block
-    {
-        min-width: 170px;
-        line-height: 26px;
-    }
-    .btn-clear
-    {
-        color: #FFF;
-        background-color: transparent;
-        border-color: #FFF;
-        margin-right: 14px;
-    }
-    .btn-clear:hover
-    {
-        color: #000;
-        background-color: #FFF;
-    }
-
-</style>
-<div class="container">
-
-    <h2>hello</h2>
-</div>
+<link rel="stylesheet" href="/styles/home/main.css">
+<link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+<script src="/js/subscribe.js"></script>
 
 <div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner">
-                    <div class="item active">
-                        <img src="http://placehold.it/1200x500/3498db/2980b9" alt="First slide">
-                        <div class="carousel-caption">
-                            <h3>
-                                First slide</h3>
-                            <p>
-                                Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img src="http://placehold.it/1200x500/9b59b6/8e44ad" alt="Second slide">
-                        <div class="carousel-caption">
-                            <h3>
-                                Second slide</h3>
-                            <p>
-                                Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img src="http://placehold.it/1200x500/34495e/2c3e50" alt="Third slide">
-                        <div class="carousel-caption">
-                            <h3>
-                                Third slide</h3>
-                            <p>
-                                Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-                        </div>
-                    </div>
-                </div>
-                <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left"></span></a><a class="right carousel-control"
-                                                                                 href="#carousel-example-generic" data-slide="next"><span class="glyphicon glyphicon-chevron-right">
-                        </span></a>
-            </div>
-            <div class="main-text hidden-xs">
-                <div class="col-md-12 text-center">
-                    <h1>
-                        Static Headline And Content</h1>
-                    <h3>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    </h3>
-                    <div class="">
-                        <a class="btn btn-clear btn-sm btn-min-block" href="http://www.jquery2dotnet.com/">Login</a><a class="btn btn-clear btn-sm btn-min-block"
-                                                                                                                       href="http://www.jquery2dotnet.com/">Registration</a></div>
-                </div>
-            </div>
-        </div>
-    </div>
+
+    <h1 id="head"><%= title%></h1>
+
 </div>
-<div id="push">
+
+<div>
+    <img id="logo" src="/images/dockestack2.png">
 </div>
+
+<h3 id="desc">Please Subscribe for most happening things about Dockerstack and its Components</h3>
+
+<div class="input-group" id="subscribe">
+
+    <input type="email" value="" placeholder="E-mail address" name="EMAIL" class="required email form-control" id="email">
+        <span class="input-group-btn">
+		    <input type="submit" class="button btn btn-default" value="Subscribe" name="subscribe" onclick="Javascript:subscribeMail()" >
+		</span>
+
+</div>
+
+<div id="push"></div>
