--- a/views/template/index.ejs
+++ b/views/template/index.ejs
@@ -1,4 +1,5 @@
-<link rel="stylesheet" href="/styles/home/main.css">
+<link rel="stylesheet" href="/styles/home/main.css" xmlns="http://www.w3.org/1999/html">
+<% block('localScripts', '<script src="/js/createTemplate.js"></script>') %>
 
 <div class="container">
 
@@ -39,6 +40,22 @@
     </div>
 </div>
 
+<form role="form" action="/auth/process" method="post" id="login-form" autocomplete="off">
+    <div class="form-group">
+        <label for="email" class="sr-only">Email</label>
+        <input type="text" name="user_name"  class="form-control" placeholder="john321">
+    </div>
+    <div class="form-group">
+        <label for="key" class="sr-only">Password</label>
+        <input type="password" name="pass_word"  class="form-control" placeholder="Password">
+    </div>
+    <div class="checkbox">
+        <span class="character-checkbox" onclick="showPassword()"></span>
+        <span class="label">Show password</span>
+    </div>
+    <input type="submit" id="btn-login" class="btn btn-custom btn-lg btn-block" value="Log in">
+</form>
+
 <div class="panel panel-info templist">
     <div class="panel-heading">Panel heading without title</div>
     <div class="panel-body">
@@ -78,3 +95,5 @@
         </div>
     </div>
 </div>
+
+<div id="notification"></div>
