Authentication module supporting files

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -33,6 +33,7 @@
     <link rel="stylesheet" href="/styles/bootstrap.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/toastr/2.0.1/toastr.css">
+    <link rel="stylesheet" href="/styles/font-awesome.css">
     <!--STYLES END-->
   </head>
 
