--- a/views/index/dashboard.ejs
+++ b/views/index/dashboard.ejs
@@ -1,4 +1,160 @@
 <link rel="stylesheet" href="/styles/home/main.css">
 
+<div class="container">
 
+</br>
+
+    <div class="navbar-right">
+
+        <div class="btn-group">
+            <button class="btn btn-success" type="button"><i class="fa fa-user"></i> Hello <%= user%> !</button>
+            <button data-toggle="dropdown" class="btn btn-success dropdown-toggle" type="button"><span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu">
+                <li><a href="/auth/logout">Signout</a></li>
+
+            </ul>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="header-nav">
+            <h1><i class="fa fa-dashboard fa-1x"></i> Dashboard</h1>
+        </div>
+    </div>
+    </br>
+
+        <div class="col-lg-12">
+
+                <div class="btn-group" style="margin-left:2%">
+                    <button type="button" class="btn btn-nav">
+                        <span class="fa fa-cloud fa-3x"></span>
+                        <p><a href="/index/public">Public Cloud</a></p>
+                    </button>
+                </div>
+
+                <div class="btn-group" style="margin-left:2%">
+                    <button type="button" class="btn btn-nav">
+                        <span class="fa fa-building-o fa-3x"></span>
+                        <p><a href="/index/private">Private Cloud</a></p>
+                    </button>
+                </div>
+                <div class="btn-group" style="margin-left:2%">
+                    <button type="button" class="btn btn-nav">
+                        <span class="fa fa-sitemap fa-3x"></span>
+                        <p><a href="/index/network">Network</a></p>
+                    </button>
+                </div>
+                <div class="btn-group" style="margin-left:2%">
+                    <button type="button" class="btn btn-nav">
+                        <span class="fa fa-database fa-3x"></span>
+                        <p><a href="/index/storage">Storage</a></p>
+                    </button>
+                </div>
+                <div class="btn-group" style="margin-left:2%">
+                    <button type="button" class="btn btn-nav">
+                        <span class="fa fa-area-chart fa-3x"></span>
+                        <p><a href="/index/monitor">Monitoring</a></p>
+                    </button>
+                </div>
+            <div class="btn-group" style="margin-left:2%">
+                <button type="button" class="btn btn-nav">
+                    <span class="fa fa-cubes fa-3x"></span>
+                    <p><a href="/index/deploy">Integrated</br>Deployments</a></p>
+                </button>
+            </div>
+                <div class="btn-group" style="margin-left:2%">
+                    <button type="button" class="btn btn-nav">
+                        <span class="fa fa-users fa-3x"></span>
+                        <p><a href="/index/users">Users</a></p>
+                    </button>
+                </div>
+
+        </div>
+ </br>
+
+    <div class="panel panel-primary graphs">
+        <div class="panel-heading">
+            Stats
+        </div>
+        <div class="panel-body">
+        <h1>Hello</h1>
+
+    </div>
+    </div>
+
+    </br>
+
+    <div class="panel panel-primary graphs">
+        <div class="panel-heading">
+            Services
+        </div>
+        <div class="panel-body">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th>
+                        Service Name
+                    </th>
+                    <th>
+                        Status
+                    </th>
+                    <th>
+                        Error/Message
+                    </th>
+                </tr>
+                </thead>
+                <tbody>
+
+                <tr class="success">
+                    <td>
+                        Dockerstack-Julie
+                    </td>
+                    <td>
+                        <span class="label label-success">Running</span>
+                    </td>
+                    <td>
+                        Running at Port 1987
+                    </td>
+                </tr>
+                <tr class="success">
+                    <td>
+                        Dockerstack-Db
+                    </td>
+                    <td>
+                        <span class="label label-success">Running</span>
+                    </td>
+                    <td>
+                        Running at Port 3306
+                    </td>
+                </tr>
+                <tr class="warning">
+                    <td>
+                        Dockerstack-Bolt
+                    </td>
+                    <td>
+                        <span class="label label-danger">Stopped</span>
+                    </td>
+                    <td>
+                        Service is not running !!
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+
+        </div>
+    </div>
+</br>
+
+    <div class="panel panel-primary graphs">
+        <div class="panel-heading">
+            Events
+        </div>
+        <div class="panel-body">
+        <h1>Hello</h1>
+
+    </div>
+    </div>
+
+</div>
 
