--- a/views/public/index.ejs
+++ b/views/public/index.ejs
@@ -147,12 +147,18 @@
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 <h4 class="modal-title">AWS Credentials</h4>
+</br>
+                <div class="alert alert-info" role="alert">
+                    <p>Make sure you enter the right access id and secret key of your AWS account</p>
+
+                </div>
             </div>
             <div class="modal-body">
+                <form role="form" action="/public/awsupdate" method="post" autocomplete="off">
                 <div class="form-group">
                     <label for="description" class="col-sm-3 control-label">Secret Key</label>
                     <div class="col-sm-9">
-                        <input type="text" class="form-control" id="description" name="description">
+                        <input type="text" class="form-control" id="description" name="secretkey">
                     </div>
                 </div>
                 </br>
@@ -160,7 +166,7 @@
                 <div class="form-group">
                     <label for="description" class="col-sm-3 control-label">Access Id</label>
                     <div class="col-sm-9">
-                        <input type="text" class="form-control" id="description" name="description">
+                        <input type="text" class="form-control" id="description" name="accessid">
                     </div>
                 </div>
                 </br>
@@ -184,8 +190,8 @@
                 </br>
                 </br>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
-
+                    <input type="submit" id="btn-login" class="btn btn-primary btn-md login" value="Save Changes">
+</form>
             </div>
 
         </div>
