--- a/views/private/index.ejs
+++ b/views/private/index.ejs
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="/styles/home/main.css">
-<% block('localScripts', '<script src="/js/"></script>') %>
+<% block('localScripts', '<script src="/js/privateCloud.js"></script>') %>
 
 <div class="container">
 
@@ -77,6 +77,8 @@
 
     </br>
 
+    <% if(service == "") {%>
+
     <div class="panel panel-primary graphs">
         <div class="panel-heading">
             Service Provider
@@ -98,7 +100,171 @@
                 </button>
             </div>
 
+            <div class="btn-group" style="margin-left:2%">
+                <button type="button" class="btn btn-nav" data-toggle="modal" href="#dedserver">
+                    <span class="fa fa-hdd-o fa-4x"></span>
+                    <p>Dedicated Server</p>
+                </button>
+            </div>
+
         </div>
     </div>
 
+
+
+    <%} else {%>
+
+    <div class="panel panel-primary graphs">
+        <div class="panel-heading">
+            Service Provider
+        </div>
+        <div class="panel-body">
+
+    <% for (var i=0;i<service.length;i++) {%>
+
+
+            <div style="float: right;">
+                <%if (service[i].service == "Vmware") {%>
+                <a  href="#">
+                    <i class="fa fa-vine fa-2x fa-border"></i>
+                </a>
+                <% } else {%>
+                <a  href="#">
+                    <i class="fa fa-vine fa-2x fa-border noconfig"></i>
+                </a>
+                <%}%>
+
+                <%if (service[i].service == "Openstack") {%>
+                <a href="#">
+                    <i class="fa fa-circle-o-notch fa-2x fa-border"></i>
+                </a>
+                <%}else{%>
+                <a href="#">
+                    <i class="fa fa-circle-o-notch fa-2x fa-border noconfig"></i>
+                </a>
+                <%}%>
+
+                <%if (service[i].service == "Dedicated") {%>
+
+                <a data-toggle="modal" href="#dedserver">
+                    <i class="fa fa-hdd-o fa-2x fa-border "></i>
+                </a>
+                <% } else {%>
+                <a data-toggle="modal" href="#dedserver">
+                    <i class="fa fa-hdd-o fa-2x fa-border noconfig"></i>
+                </a>
+                <% }%>
+            </div>
+    <% }%>
+
+</br>
+</br>
+</br>
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    Dedicated Server
+                </div>
+                <div class="panel-body">
+                    <% for (var k=0;k<service.length;k++) {%>
+                    <% if (service[k].service == "Dedicated") {%>
+                        <div class="col-md-7">
+
+                            <div class="panel panel-primary">
+                                <div class="panel-heading">
+                                    Server Details
+                                </div>
+                            <div class="panel-body">
+
+                                Server Address : <%= service[k].hostname%>
+                                </br>
+                                Cpu's: nil
+                                 </br>
+                                Ram: nil
+                                </br>
+                                Storage: nil
+
+                            </div>
+
+                            </div>
+
+                    </div>
+                    <% }%>
+                    <% }%>
+
+                </div>
+
+            </div>
+        </div>
     </div>
+
+
+
+
+    <% }%>
+
+    <div id="dedserver" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">Dedicated Server Credentials</h4>
+                    </br>
+                    <div class="alert alert-info" role="alert">
+                        <p>Please enter the proper username and password of the server</p>
+
+                    </div>
+                </div>
+                <div class="modal-body">
+
+                    <form role="form" action="/private/creddedserver" method="post" autocomplete="off">
+                        <div class="form-group">
+                            <label  class="col-sm-3 control-label">Hostname</label>
+                            <div class="col-sm-9">
+                                <input type="text" class="form-control" id="hostname" name="hostname">
+                            </div>
+                        </div>
+                        </br>
+                        </br>
+                        <div class="form-group">
+                            <label  class="col-sm-3 control-label">Username</label>
+                            <div class="col-sm-9">
+                                <input type="text" class="form-control" id="username" name="username">
+                            </div>
+                        </div>
+
+                        </br>
+                        </br>
+
+                        <div class="form-group">
+                            <label  class="col-sm-3 control-label">Password</label>
+                            <div class="col-sm-9">
+                                <input type="password" class="form-control" id="password" name="password">
+                            </div>
+                        </div>
+
+                        </br>
+                        </br>
+
+                        <div class="form-group">
+                            <label for="description" class="col-sm-3 control-label">Port Number</label>
+                            <div class="col-sm-9">
+                                <input type="text" class="form-control" id="portno" name="portno">
+                            </div>
+                        </div>
+
+                        </br>
+                        </br>
+
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            <input type="submit" id="btn-login" class="btn btn-success btn-md login" value="Submit to Save" />
+                        </div>
+                    </form>
+
+                    <input type="submit" id="btn-login" class="btn btn-primary btn-md login" value="Check Credentials" onClick="JavaScript:checkDedServercred()">
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
